Implement submit function

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -7,5 +7,6 @@
 	<body>
 		<h1>Index.html</h1>
 		<p><a href="/sample">to sample page</a></p>
+		<p><a href="/register">to register page</a></p>
 	</body>
 </html>
